--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Coin.cs" />
+    <Compile Include="Assets\Scripts\MoverPlayer.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\CoinGenerator.cs" />
     <Compile Include="Assets\Scripts\AnimationFirstAidKit.cs" />
@@ -67,7 +68,6 @@
     <Compile Include="Assets\Scripts\Wallet.cs" />
     <Compile Include="Assets\Scripts\MoverEnemy.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\ControlerPlayer.cs" />
     <Compile Include="Assets\Scripts\ReviewEnemy.cs" />
     <Compile Include="Assets\Scripts\FirstAidKitGenerator.cs" />
     <Compile Include="Assets\Scripts\FirstAidKit.cs" />
