--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,17 +60,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Coin.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\Blow.cs" />
     <Compile Include="Assets\Scripts\MoverPlayer.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\HealthBar2.cs" />
     <Compile Include="Assets\Scripts\CoinGenerator.cs" />
     <Compile Include="Assets\Scripts\AnimationFirstAidKit.cs" />
     <Compile Include="Assets\Scripts\Point.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\Treatment.cs" />
     <Compile Include="Assets\Scripts\Wallet.cs" />
     <Compile Include="Assets\Scripts\MoverEnemy.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\HealthText.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\Health.cs" />
     <Compile Include="Assets\Scripts\ReviewEnemy.cs" />
     <Compile Include="Assets\Scripts\FirstAidKitGenerator.cs" />
+    <Compile Include="Assets\Scripts\HealthBar\HealthBar3.cs" />
     <Compile Include="Assets\Scripts\FirstAidKit.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
