--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\FirstAidKitGenerator.cs" />
     <Compile Include="Assets\Scripts\HealthBar\HealthBar3.cs" />
     <Compile Include="Assets\Scripts\FirstAidKit.cs" />
+    <Compile Include="Assets\Scripts\Vampirism.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
